src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Choice_A__c</fullName>
        <label>Choice A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Choice_B__c</fullName>
        <label>Choice B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Choice_C__c</fullName>
        <label>Choice C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Choice_D__c</fullName>
        <label>Choice D</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Choice_E__c</fullName>
        <label>Choice E</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CorrectAnswer__c</fullName>
        <description>The correct answer for the exam question</description>
        <label>Correct Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questionfor__c</fullName>
        <description>Pick list field to determine what the question is for. Example: Survey question or exam question</description>
        <label>Question for</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Question_Text__c</columns>
        <columns>Questionfor__c</columns>
        <columns>Choice_A__c</columns>
        <columns>Choice_B__c</columns>
        <columns>Choice_C__c</columns>
        <columns>Choice_D__c</columns>
        <columns>Choice_E__c</columns>
        <columns>CorrectAnswer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Multiple_Choice</fullName>
        <active>true</active>
        <label>Multiple Choice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radio</fullName>
        <active>true</active>
        <label>Radio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Short_Answer</fullName>
        <active>true</active>
        <label>Short Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>True_False</fullName>
        <active>true</active>
        <label>True/False</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Exam_question_cannot_be_short_answer</fullName>
        <active>true</active>
        <description>If a question is for an exam, the question type cannot be short answer</description>
        <errorConditionFormula>AND(ISPICKVAL(Questionfor__c,&apos;Exam&apos;), RecordType.Name = &apos;Short Answer&apos;)</errorConditionFormula>
        <errorDisplayField>Questionfor__c</errorDisplayField>
        <errorMessage>Exam question cannot be a short answer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exam_question_has_correct_answer</fullName>
        <active>true</active>
        <description>The exam question must contain the correct answer</description>
        <errorConditionFormula>AND(ISPICKVAL(Questionfor__c,&apos;Exam&apos;),
ISBLANK(CorrectAnswer__c),
 RecordType.Name &lt;&gt; &apos;Short Answer&apos;
)</errorConditionFormula>
        <errorDisplayField>CorrectAnswer__c</errorDisplayField>
        <errorMessage>You must provide the correct answer for the exam question</errorMessage>
    </validationRules>
</CustomObject>